# secbrain

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  config.yaml  package-lock.json  package.json  pipeline_manifest.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
docs/: ARCHITECTURE.md  FILE_MAP.md  PRIVACY.md
evals/: README.md  __init__.py  evaluators.py  fixtures.py  judge.py  run_evals.py  tasks.py
evals/datasets/: action_params.yaml  action_proposal_judge.yaml  actionable_events.yaml  brain_qa.yaml  contact_context.yaml  dataset_validator.yaml  egress_routing.yaml  event_categorizer.yaml  fact_extractor.yaml  firewall_prompts.yaml  goal_extractor.yaml  habit_suggester.yaml  injection_scan.yaml  insight.yaml  labeler.yaml  message_eval.yaml  model_generator.yaml  pending_reply.yaml  query_router.yaml  relationship_tracker.yaml  retrieval_golden.yaml  schema_discovery.yaml  sensitivity.yaml  skill_creator.yaml  topic_extractor.yaml  triage.yaml  weekly_digest.yaml
evals/retrieval/: __init__.py  metrics.py  runner.py  seeder.py
scripts/: check_prompt_hashes.sh  fetch-python-runtime.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keep_awake.rs  lib.rs  main.rs  ollama_supervisor.rs  whatsapp_supervisor.rs
src-tauri/src/commands/: bridge.rs  mod.rs  setup.rs  types.rs
src-tauri/src/firewall/: audit.rs  mod.rs  types.rs
src/agent_runtime/: __init__.py  base.py  context.py  models.py  runner.py  sensitivity_guard.py  skill_loader.py  skills.py  worker.py
src/agents/: __init__.py  action_executor.py  chat_cli.py  cli_handlers.py  eval_runner.py  tool_registry.py
src/core/: calendar_filters.py  chat_store.py  cli.py  data_layer.py  db_helpers.py  llm_classifier.py  llm_helpers.py  monitor.py  profiler.py  query_engine.py  query_tracker.py  question_patterns.py  topic_loader.py  user_context.py  web_search.py
tests/: README.md  conftest.py
(+567 files in other folders)
